# adventofcode-2019

./: pyproject.toml
day01/: index.py
day02/: index.py
day03/: index.py
day04/: index.py
day05/: index.py
day06/: index.py
day07/: index.py
day08/: index.py
day09/: index.py
