[tool.poetry]
name = "adventofcode-2019"
version = "0.1.0"
description = ""
authors = ["Eric Johney <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.750.0"
numpy = "^1.17"
[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
